--- a/index.html
+++ b/index.html
@@ -11,42 +11,60 @@
     <h1>Línea de Vida Profesional</h1>
     <p>Tu historia contada visualmente</p>
     </header>
-
-    <div class="timeline">
-    <div class="container left">
-      <div class="content">
+    <div class="CajonS"></div> 
+    <div class="containerFLEX">
+    <div class="boxFLEX1">
+        <img src="/Fotos/image-hWTABVGOSYsTkqsIM15aj.png" alt ="Imagen Presentación">
+    </div>
+    <div class="timeline boxFLEX2">
+      <div class="container left">
+      <div class="contentL">
         <h3>2005</h3>
         <p>Inicio de carrera técnica xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</p>
       </div>
-    </div>
+      </div>
 
-    <div class="container right">
-      <div class="content">
+        <div class="container right">
+      <div class="contentR">
         <h3>2012</h3>
         <p>Primer proyecto profesional</p>
       </div>
-    </div>
+        </div>
 
-    <div class="container left">
-      <div class="content">
+        <div class="container left">
+      <div class="contentL">
         <h3>2017</h3>
         <p>Especialización en planificación</p>
       </div>
-    </div>
+        </div>
 
-    <div class="container right">
-      <div class="content">
+        <div class="container right">
+      <div class="contentR">
         <h3>2023</h3>
         <p>Publicación de proyecto 3D a 5D</p>
       </div>
-    </div>
+        </div>
 
-    <div class="container left">
-      <div class="content">
+        <div class="container left">
+      <div class="contentL">
         <h3>2025</h3>
         <p>Desarrollo de portafolio web</p>
       </div>
+        </div>
+
+        <div class="container right">
+            <div class="contentR">
+            <h3>2025</h3>
+            <p>Desarrollo de portafolio web</p>
+        </div>
+        </div>
     </div>
-  </div>
+    </div>
+    <div class="containerFLEX">
+        <div class="boxFLEX1">Div 1</div>
+        <div class="boxFLEX2">Div 2</div>
+    </div>
+
+
 </body>
 </html>
