--- a/index.html
+++ b/index.html
@@ -11,16 +11,18 @@
     <h1>Línea de Vida Profesional</h1>
     <p>Tu historia contada visualmente</p>
     </header>
+
     <div class="CajonS"></div> 
+
     <div class="containerFLEX">
-    <div class="boxFLEX1">
+        <div class="boxFLEX">
         <img src="/Fotos/image-hWTABVGOSYsTkqsIM15aj.png" alt ="Imagen Presentación">
-    </div>
-    <div class="timeline boxFLEX2">
+        </div>
+    <div class="timeline boxFLEX">
       <div class="container left">
       <div class="contentL">
         <h3>2005</h3>
-        <p>Inicio de carrera técnica xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</p>
+        <p>Inicio de carrera técnica xxxxx xxxxx xxxxx</p>
       </div>
       </div>
 
@@ -58,11 +60,11 @@
             <p>Desarrollo de portafolio web</p>
         </div>
         </div>
-    </div>
+        </div>
     </div>
     <div class="containerFLEX">
-        <div class="boxFLEX1">Div 1</div>
-        <div class="boxFLEX2">Div 2</div>
+        <div class="boxFLEX">Div 1</div>
+        <div class="boxFLEX">Div 2</div>
     </div>
 
 
