--- a/index.html
+++ b/index.html
@@ -15,58 +15,68 @@
     <div class="CajonS"></div> 
 
     <div class="containerFLEX">
+
         <div class="boxFLEX">
-        <img src="/Fotos/image-hWTABVGOSYsTkqsIM15aj.png" alt ="Imagen Presentación">
-        </div>
-    <div class="timeline boxFLEX">
-      <div class="container left">
-      <div class="contentL">
-        <h3>2005</h3>
-        <p>Inicio de carrera técnica xxxxx xxxxx xxxxx</p>
-      </div>
-      </div>
+          <div class = "Caja">
+            <img src="/Fotos/image-hWTABVGOSYsTkqsIM15aj.png" alt ="Imagen Presentación">
+          </div>
+                  <div class = "Caja">
+            <img src="/Fotos/image-hWTABVGOSYsTkqsIM15aj.png" alt ="Imagen Presentación">
+          </div>
 
-        <div class="container right">
-      <div class="contentR">
-        <h3>2012</h3>
-        <p>Primer proyecto profesional</p>
-      </div>
         </div>
 
-        <div class="container left">
+        <div class="timeline boxFLEX">
+
+            <div class="container left">
+            <div class="contentL">
+            <h3>2005</h3>
+            <p>Inicio de carrera técnica xxxxx xxxxx</p>
+            </div>
+            </div>
+
+            <div class="container right">
+            <div class="contentR">
+            <h3>2012</h3>
+            <p>Primer proyecto profesional</p>
+            </div>
+            </div>
+
+            <div class="container left">
       <div class="contentL">
         <h3>2017</h3>
         <p>Especialización en planificación</p>
       </div>
-        </div>
+            </div>
 
-        <div class="container right">
+            <div class="container right">
       <div class="contentR">
         <h3>2023</h3>
         <p>Publicación de proyecto 3D a 5D</p>
       </div>
-        </div>
+            </div>
 
-        <div class="container left">
+            <div class="container left">
       <div class="contentL">
         <h3>2025</h3>
         <p>Desarrollo de portafolio web</p>
       </div>
-        </div>
+            </div>
 
-        <div class="container right">
+            <div class="container right">
             <div class="contentR">
             <h3>2025</h3>
             <p>Desarrollo de portafolio web</p>
         </div>
-        </div>
+            </div>
+
         </div>
     </div>
+
     <div class="containerFLEX">
         <div class="boxFLEX">Div 1</div>
         <div class="boxFLEX">Div 2</div>
     </div>
-
 
 </body>
 </html>
