--- a/index.html
+++ b/index.html
@@ -18,10 +18,16 @@
 
         <div class="boxFLEX">
           <div class = "Caja">
-            <img src="/Fotos/image-hWTABVGOSYsTkqsIM15aj.png" alt ="Imagen Presentación">
+            <img src="/Fotos/image-2WdPZFI9WGo3_aJHXnxSI.png" alt ="Imagen Presentación">
           </div>
-                  <div class = "Caja">
-            <img src="/Fotos/image-hWTABVGOSYsTkqsIM15aj.png" alt ="Imagen Presentación">
+          <div class = "Caja">
+            <img src="/Fotos/image-0Vu2bpysuWqStPJLb-__y.png" alt ="Imagen Presentación">
+          </div>
+          <div class = "Caja">
+            <img src="/Fotos/image-pX9LdL_ymXZH4sV_b230q.png" alt ="Imagen Presentación">
+          </div>
+          <div class = "Caja">
+            <img src="/Fotos/image-z7UYLghSIkqv9P5gnDH9o.png" alt ="Imagen Presentación">
           </div>
 
         </div>
@@ -31,7 +37,7 @@
             <div class="container left">
             <div class="contentL">
             <h3>2005</h3>
-            <p>Inicio de carrera técnica xxxxx xxxxx</p>
+            <p>Inicio de carrera técnica</p>
             </div>
             </div>
 
@@ -43,30 +49,30 @@
             </div>
 
             <div class="container left">
-      <div class="contentL">
+            <div class="contentL">
         <h3>2017</h3>
-        <p>Especialización en planificación</p>
+        <p>Especialización</p>
       </div>
             </div>
 
             <div class="container right">
       <div class="contentR">
         <h3>2023</h3>
-        <p>Publicación de proyecto 3D a 5D</p>
+        <p>Publicación de proyecto</p>
       </div>
             </div>
 
             <div class="container left">
       <div class="contentL">
         <h3>2025</h3>
-        <p>Desarrollo de portafolio web</p>
+        <p>Desarrollo de portafolio</p>
       </div>
             </div>
 
             <div class="container right">
             <div class="contentR">
             <h3>2025</h3>
-            <p>Desarrollo de portafolio web</p>
+            <p>Desarrollo de portafolio</p>
         </div>
             </div>
 
