--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <header>
-    <h1>Línea de Vida Profesional</h1>
-    <p>Tu historia contada visualmente</p>
+    <h1>Historia Profesional</h1>
+    <p>Participación en Proyectos</p>
     </header>
 
     <div class="CajonS"></div> 
