--- a/index.html
+++ b/index.html
@@ -3,8 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HOJA DE VIDA</title>
+    <title>CV - NOMBRE</title>
     <link href="style.css" rel="stylesheet">
+
+    <!-- Open Graph: mejora cómo se ve cuando compartes el enlace -->
+    <meta property="og:title" content="Línea de Vida Profesional - NOMBRE">
+    <meta property="og:description" content="Explora mi trayectoria laboral">
+    <meta property="og:image" content= <img src="./preview.png" alt="Vista previa del CV">
+    <meta property="og:url" content="https://cv-made-morales.vercel.app">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Línea de Vida Profesional - NOMBRE">
+    <meta name="twitter:description" content="Explora mi trayectoria laboral">
+    <meta name="twitter:image" content="https://cv-made-morales.vercel.app/preview.png">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
     <header>
@@ -29,6 +44,9 @@
           <div class = "Caja">
             <img src="/Fotos/image-z7UYLghSIkqv9P5gnDH9o.png" alt ="Imagen Presentación">
           </div>
+          <div class = "Caja">
+            <img src="/Fotos/image-tYdMvmszm4OLUyiTLGe0Z.png" alt ="Imagen Presentación">
+          </div>
 
         </div>
 
@@ -36,52 +54,47 @@
 
             <div class="container left">
             <div class="contentL">
-            <h3>2005</h3>
+            <h3><i class="fas fa-briefcase"></i> 2005</h3>
             <p>Inicio de carrera técnica</p>
             </div>
             </div>
 
             <div class="container right">
             <div class="contentR">
-            <h3>2012</h3>
+            <h3><i class="fas fa-briefcase"></i> 2012</h3>
             <p>Primer proyecto profesional</p>
             </div>
             </div>
 
             <div class="container left">
             <div class="contentL">
-        <h3>2017</h3>
-        <p>Especialización</p>
-      </div>
+            <h3><i class="fas fa-briefcase"></i> 2017</h3>
+            <p>Especialización en Proyectos Electricos</p>
             </div>
-
-            <div class="container right">
-      <div class="contentR">
-        <h3>2023</h3>
-        <p>Publicación de proyecto</p>
-      </div>
-            </div>
-
-            <div class="container left">
-      <div class="contentL">
-        <h3>2025</h3>
-        <p>Desarrollo de portafolio</p>
-      </div>
             </div>
 
             <div class="container right">
             <div class="contentR">
-            <h3>2025</h3>
-            <p>Desarrollo de portafolio</p>
-        </div>
+            <h3><i class="fas fa-briefcase"></i> 2023</h3>
+            <p>Publicación de proyecto en Tendidos Electricos</p>
+            </div>
+            </div>
+
+            <div class="container left">
+            <div class="contentL">
+            <h3><i class="fas fa-briefcase"></i> 2025</h3>
+            <p>Desarrollo de portafolio de Proyectos Electricos</p>
+            </div>
+            </div>
+
+            <div class="container right">
+            <div class="contentR">
+            <h3><i class="fas fa-briefcase"></i> 2025</h3>
+            <p>Desarrollo de portafolio de Proyectos Electricos</p>
+            </div>
             </div>
 
         </div>
-    </div>
-
-    <div class="containerFLEX">
-        <div class="boxFLEX">Div 1</div>
-        <div class="boxFLEX">Div 2</div>
     </div>
 
 </body>
