--- a/index.html
+++ b/index.html
@@ -69,28 +69,28 @@
             <div class="container left">
             <div class="contentL">
             <h3><i class="fas fa-briefcase"></i> 2017</h3>
-            <p>Especialización en Proyectos Electricos</p>
+            <p>Especialización en Comida Extranjera</p>
             </div>
             </div>
 
             <div class="container right">
             <div class="contentR">
-            <h3><i class="fas fa-briefcase"></i> 2023</h3>
-            <p>Publicación de proyecto en Tendidos Electricos</p>
+            <h3><i class="fas fa-briefcase"></i> 2020</h3>
+            <p>Publicación de Tesis sobre comida Peruana</p>
             </div>
             </div>
 
             <div class="container left">
             <div class="contentL">
-            <h3><i class="fas fa-briefcase"></i> 2025</h3>
-            <p>Desarrollo de portafolio de Proyectos Electricos</p>
+            <h3><i class="fas fa-briefcase"></i> 2023</h3>
+            <p>Desarrollo de Platos Especiales</p>
             </div>
             </div>
 
             <div class="container right">
             <div class="contentR">
             <h3><i class="fas fa-briefcase"></i> 2025</h3>
-            <p>Desarrollo de portafolio de Proyectos Electricos</p>
+            <p>Inicio de Trabajo en el Extranjero</p>
             </div>
             </div>
 
