--- a/index.html
+++ b/index.html
@@ -97,5 +97,14 @@
         </div>
     </div>
 
+    <footer>
+      <p>Conéctate conmigo: 
+      <a href="https://www.linkedin.com/in/tu-perfil" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
+      <a href="mailto:tucorreo@ejemplo.com"><i class="fas fa-envelope"></i> Email</a>
+      </p>
+      <a class="download-button" href="cv-NOMBRE.pdf" download>
+      <i class="fas fa-download"></i> Descargar PDF
+      </a>
+    </footer>
 </body>
 </html>
