--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Open Graph: mejora cómo se ve cuando compartes el enlace -->
     <meta property="og:title" content="Línea de Vida Profesional - NOMBRE">
     <meta property="og:description" content="Explora mi trayectoria laboral">
-    <meta property="og:image" content= <img src="./preview.png" alt="Vista previa del CV">
+    <meta property="og:image" content= <img src="https://vercel.com/josea2990s-projects/carreraprofesional-cv/EXFV7ABXT4ppWvP9sfwnZkk66QL6/source/preview.png" alt="Vista previa del CV">
     <meta property="og:url" content="https://cv-made-morales.vercel.app">
     <meta property="og:type" content="website">
 
