--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Open Graph: mejora cómo se ve cuando compartes el enlace -->
     <meta property="og:title" content="Línea de Vida Profesional - NOMBRE">
     <meta property="og:description" content="Explora mi trayectoria laboral">
-    <meta property="og:image" content= <img src="https://vercel.com/josea2990s-projects/carreraprofesional-cv/EXFV7ABXT4ppWvP9sfwnZkk66QL6/source/preview.png" alt="Vista previa del CV">
+    <meta property="og:image" content= <img src="https://arwpw6npkgugcnuk.public.blob.vercel-storage.com/Preview-7GD7yami8ZRGVc9c27h6O7BC8Yak8X.png" alt="Vista previa del CV">
     <meta property="og:url" content="https://cv-made-morales.vercel.app">
     <meta property="og:type" content="website">
 
@@ -98,11 +98,11 @@
     </div>
 
     <footer>
-      <p>Conéctate conmigo: 
+      <p>Contactos: 
       <a href="https://www.linkedin.com/in/tu-perfil" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
       <a href="mailto:tucorreo@ejemplo.com"><i class="fas fa-envelope"></i> Email</a>
       </p>
-      <a class="download-button" href="cv-NOMBRE.pdf" download>
+      <a class="download-button" href="https://arwpw6npkgugcnuk.public.blob.vercel-storage.com/cv%20-%20NOMBRE-Kx5LhOrqWT3ksQbuYMiEgLBCk0DkID.pdf" download>
       <i class="fas fa-download"></i> Descargar PDF
       </a>
     </footer>
