--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV - JOSE MARTINEZ</title>
+    <title>CV - NOMBRE</title>
     <link href="style.css" rel="stylesheet">
 
     <!-- Open Graph: mejora cómo se ve cuando compartes el enlace -->
